# jyotishyamitra

./: LICENSE  example.py  jyotishyamitra.py  pyproject.toml  readme.md
input/: birthdata.py
readmefiles/: SampleOutputFile.json
src/: jyotishyamitra.py
src/jyotishyamitra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/support/: dashas.py  mod_astrodata.py  mod_bala.py  mod_general.py  mod_json.py  mod_lagna.py  mod_specialpoints.py
support/: mod_ashtakavarga.py  mod_constants.py  mod_divisional.py  mod_general.py  panchanga.py
